update dvm, art, ark